<?xml version="1.0"?>
<package format="2">
  <name>gokhas_interface</name>
  <version>0.0.1</version>
  <description>Qt6 and ROS Noetic Entegrated GUI for AIR DEFENSE TOWER PROJECT</description>

  <maintainer email="ahmetceyhunbilir16@gmail.com">Ahmet Ceyhun Bilir</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <build_depend>python3-pyqt6</build_depend>
  <exec_depend>python3-pyqt6</exec_depend>
  
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>